Add POC for trivia game

--- a/friends.yaml
+++ b/friends.yaml
@@ -3,7 +3,7 @@
     a: "Officer Goodbody"
     d: "Season 10"
   - q: "Why does Ross lie to Rachel about the fate of his childhood pediatrician?"
-    a: "Ross still sees him himself, as a grown man"
+    a: "Ross still sees the pediatrician himself, as a grown man"
     d: "Season 8-9"
   - q: "Who enters the restaurant as Chandler is attempting to propose to Monica?"
     a: "Richard"
@@ -16,4 +16,22 @@
     d: "Season 3-4"
   - q: "Which of Mr Heckles' possessions that the girls inherit does Rachel love, but Monica loathe?"
     a: "A seashell lamp"
+    d: "Season 1-2"
+  - q: "In Phoebe's little black book that she give to Rachel after Mike proposes, what does the red 'x' next to Bob Greenmore'sname mean?"
+    a: "Dead"
+    d: "Season 10"
+  - q: "Why does Monica dislike Chandler's boss, Doug?"
+    a: "He drunkenly urinated on the ice scuplture at Monica and Chandler's engagement party"
+    d: "Season 8-9"
+  - q: "After a double date, how does Janine describe Monica and Chandler?"
+    a: "A little 'blah'"
+    d: "Season 6-7"
+  - q: "After Kissing Monica on the lips in front of the other girls before they are a couple, what does Chandler then do to cover it up?"
+    a: "Kisses each girl on the lips"
+    d: "Season 4-5"
+  - q: "Who is the first other assistant to Joanna with Rachel?"
+    a: "Mark"
+    d: "Season 3-4"
+  - q: "What does Paolo do, which causes Rachel to dump him?"
+    a: "He hits on Phoebe whilst she's massaging him"
     d: "Season 1-2"
