Add more question/answers to friends trivia game

--- a/friends.yaml
+++ b/friends.yaml
@@ -17,11 +17,12 @@
   - q: "Which of Mr Heckles' possessions that the girls inherit does Rachel love, but Monica loathe?"
     a: "A seashell lamp"
     d: "Season 1-2"
+
   - q: "In Phoebe's little black book that she give to Rachel after Mike proposes, what does the red 'x' next to Bob Greenmore'sname mean?"
     a: "Dead"
     d: "Season 10"
   - q: "Why does Monica dislike Chandler's boss, Doug?"
-    a: "He drunkenly urinated on the ice scuplture at Monica and Chandler's engagement party"
+    a: "He drunkenly urinated on the ice sculpture at Monica and Chandler's engagement party"
     d: "Season 8-9"
   - q: "After a double date, how does Janine describe Monica and Chandler?"
     a: "A little 'blah'"
@@ -35,3 +36,314 @@
   - q: "What does Paolo do, which causes Rachel to dump him?"
     a: "He hits on Phoebe whilst she's massaging him"
     d: "Season 1-2"
+ 
+  - q: "What are Rachel's rules whilst playing heads or tails with Joey?"
+    a: "Heads she wins, tails Joey loses"
+    d: "Season 10"
+  - q: "What causes Phoebe to drop the bowl of lottery tickets from the balcony?"
+    a: "A pigeon"
+    d: "Season 8-9"
+  - q: "What is the name of the officer that pulls Ross over for driving too slowly?"
+    a: "Officer Petty (Ross calls him Officer Pretty)"
+    d: "Season 6-7"
+  - q: "Who leaves (the first) message on Ross's answering machine, whilst Rachel is there alone borrowing margarita supplies?"
+    a: "Emily"
+    d: "Season 4-5"
+  - q: "Who sabotages Rachel's interview for the role of Junior Miss Buyer?"
+    a: "Her boss Joanna"
+    d: "Season 3-4"
+  - q: "How is Dr. Drake Ramoray killed off?"
+    a: "He falls down an elevator shaft"
+    d: "Season 1-2"
+
+  - q: "What does Rachel's boss key mistakenly calling Ross?"
+    a: "Ron"
+    d: "Season 10"
+  - q: "When Phoebe mugged Ross as a child, back before they knew each other, what possession of his did she keep?"
+    a: "His hand-drawn comic, Science Boy"
+    d: "Season 8-9"
+  - q: "When David and Phoebe reunite in New York for one night only, David speaks a Russian phrase to Phoebe. What does it mean?"
+    a: "Please, clean my beakers"
+    d: "Season 6-7"
+  - q: "What kind of soup does the runner place in front of Joey during the commercial audition that throws him?"
+    a: "Noodle soup"
+    d: "Season 4-5"
+  - q: "What is the line to Chandler, after he's so far past the line that he can't even see it?"
+    a: "The line is a dot to him!"
+    d: "Season 3-4"
+  - q: "What is Richard's occupation?"
+    a: "Ophthalmologist"
+    d: "Season 1-2"
+
+  - q: "Chandler finds a pair of furry handcuffs whilst moving out of his and Monica's apartment. Who do they discover that they belonged to?"
+    a: "Monica and Ross's nana"
+    d: "Season 10"
+  - q: "What is Emma's first word, according to Rachel?"
+    a: "Gleeba"
+    d: "Season 8-9"
+  - q: "On Rachel's 30th birthday, what does Tag say he is totally freaked out about, much to her annoyance?"
+    a: "Turning 25"
+    d: "Season 6-7"
+  - q: "When Joey 'leapt to save' Ross after a car backfire scared them on their ride-along with Gary, what was his real motivation?"
+    a: "He wanted to save his sandwich"
+    d: "Season 4-5"
+  - q: "In her job as head chef at Allesandro's, whom does Monica hire just to fire?"
+    a: "Joey"
+    d: "Season 3-4"
+  - q: "What does Eddie's ex-girlfriend drop off at Chandler's apartment?"
+    a: "An empty fish tank"
+    d: "Season 1-2"
+
+  - q: "Who ends up being Mike's third groomsman, after Rachel cannot decide between Ross and Chandler?"
+    a: "Chappy, Mike's family dog"
+    d: "Season 10"
+  - q: "How does Monica describe Geoffrey, the Maitre d' at Javu?"
+    a: "The funniest guy she's ever met"
+    d: "Season 8-9"
+  - q: "What does Jack Geller reveal that Monica's wedding fund is now called?"
+    a: "The beach house"
+    d: "Season 6-7"
+  - q: "Which two bathroom items form a paste as Ross attempts to get his leather trousers back on?"
+    a: "Lotion and powder"
+    d: "Season 4-5"
+  - q: "Name one of the injuries that Pete sustains whilst attempting to be the best fighting champion."
+    a: "A torn rotator cuff / a hairline fracture in the right forearm / a severely bruised Adam's Apple"
+    d: "Season 3-4"
+  - q: "Which friend gets a hickey from a band member?"
+    a: "Monica"
+    d: "Season 1-2"
+
+  - q: "What is Rachel's seat number for her flight to Paris?"
+    a: "32C"
+    d: "Season 10"
+  - q: "Who ends up attending 'Why Don't You Like Me? A Bitter Woman's Journey Through Life' alone?"
+    a: "Chandler"
+    d: "Season 8-9"
+  - q: "How do the girls locate each other in the mayhem of the discount wedding dress shop?"
+    a: "By using whistles"
+    d: "Season 6-7"
+  - q: "Do the guys take the north or the south route to Vegas?"
+    a: "North"
+    d: "Season 4-5"
+  - q: "How does Phoebe Sr. help Phoebe understand what it's like to give up a child?"
+    a: "She gives her a puppy for three days"
+    d: "Season 3-4"
+  - q: "Where has Ross decided that he and Rachel are going to move out to when they have children?"
+    a: "Scaresdale"
+    d: "Season 1-2"
+
+  - q: "Phoebe plays what object during a game of rock-paper-scissors?"
+    a: "Water balloon"
+    d: "Season 10"
+  - q: "Rachel feigns a work problem to get Joey to talk to her again after he tells her he loves her. What is it?"
+    a: "That her boss wants to buy her baby"
+    d: "Season 8-9"
+  - q: "What started the fire at Phoebe and Rachel's apartment?"
+    a: "Hair straighteners"
+    d: "Season 6-7"
+  - q: "What was Phoebe's worst Thanksgiving ever?"
+    a: "The one she had in a past life, in 1862, as her arm was blown off whilst tending the wounded during the Civil War"
+    d: "Season 4-5"
+  - q: "Whilst ordering a pizza mid-fight, of what ingredient does Rachel add an extra portion?"
+    a: "Anchovies"
+    d: "Season 3-4"
+  - q: "How do Rachel and Monica know Lisa from Animal Control?"
+    a: "They attend Lincoln High School together"
+    d: "Season 1-2"
+
+
+  - q: "What is Rachel's flight number to Paris?"
+    a: "Flight 421"
+    d: "Season 10"
+  - q: "What phrase does Ross use to sign an autograph for a fan at the paleontology conference?"
+    a: "I dig you"
+    d: "Season 8-9"
+  - q: "Which friend does Monica not let drive her sports car?"
+    a: "Rachel"
+    d: "Season 6-7"
+  - q: "What is the occupation of Joey's hand twin?"
+    a: "He's a Vegas croupier"
+    d: "Season 4-5"
+  - q: "In 'The One With Joey's Dirty Day,' why is Joey's body odor so bad on set whilst he's filming?"
+    a: "He went on a three-day fishing trip, then fell in a tub of worms"
+    d: "Season 3-4"
+  - q: "What game has been set up in Chandler's bedroom at Rachel's party in his apartment?"
+    a: "Volleyball"
+    d: "Season 1-2"
+
+
+  - q: "How many steps are in Joey's routine with the ladies?"
+    a: "Six"
+    d: "Season 10"
+  - q: "What does Ross dress up as for Monica's Halloween party?"
+    a: "Spud-nik"
+    d: "Season 8-9"
+  - q: "For their last meal as roommates, Joey buys pizza. What has Chandler already ordered?"
+    a: "Chinese - the food of his ancestors, apparently"
+    d: "Season 6-7"
+  - q: "What does Rachel do that scares Joshua away for good?"
+    a: "Answer the door to him wearing a wedding dress proclaiming, 'I do!'"
+    d: "Season 4-5"
+  - q: "What activity causes Joey to break his arm?"
+    a: "He was jumping up and down on his bed"
+    d: "Season 3-4"
+  - q: "What does Rachel's dad use to try to bribe her to move back from New York?"
+    a: "A convertible car"
+    d: "Season 1-2"
+
+
+  - q: "What do the gang do for the last time before Monica and Chandler move?"
+    a: "They go for one last coffee"
+    d: "Season 10"
+  - q: "What does Gavin give Rachel for her birthday?"
+    a: "A green scarf"
+    d: "Season 8-9"
+  - q: "Why does the filming of Joey's movie on the day of Monica and Chandler's wedding take much longer than scheduled?"
+    a: "Joey's co-star turns up to work drunk"
+    d: "Season 6-7"
+  - q: "Complete the Joey lyric: 'This hand is your hand / The hand is my hand...'"
+    a: "... oh wait that's your hand / no, wait, it's my hand"
+    d: "Season 4-5"
+  - q: "Phoebe's pregnancy causes her to start craving what?"
+    a: "Meat"
+    d: "Season 3-4"
+  - q: "What is the true identity of Chandler's online girlfriend?"
+    a: "Janice"
+    d: "Season 1-2"
+
+
+  - q: "What was the name of Ross and Chandler's college band?"
+    a: "Way! No Way!"
+    d: "Season 10"
+  - q: "Where does Chandler agree to move, as the result of falling asleep in a meeting?"
+    a: "Tulsa, Oklahoma"
+    d: "Season 8-9"
+  - q: "Which friend does Chandler assign to guard the engagement ring he wants to buy for Monica?"
+    a: "Phoebe"
+    d: "Season 6-7"
+  - q: "What is Ross's New Year's Resolution?"
+    a: "Every day, he will do one thing that he has never done before"
+    d: "Season 4-5"
+  - q: "Where does Ross believe the fire in Phoebe's dollhouse originated?"
+    a: "The Aroma Room"
+    d: "Season 3-4"
+  - q: "Why does Chandler brand Joey's tailor a 'very bad man'?"
+    a: "He grabs Chandler's crotch whilst measuring the in-seam"
+    d: "Season 1-2"
+
+  - q: "What is the name of Estelle's only other client?"
+    a: "Al Zebooker"
+    d: "Season 10"
+  - q: "After Phoebe and Mike break-up and Monica is in charge of looking after Phoebe, what is the name of Mike's friend whom he puts in charge of looking after him?"
+    a: "Manny"
+    d: "Season 8-9"
+  - q: "How is a fire alarm beeping in a trash chute traced back to Phoebe?"
+    a: "She'd wrapped it in a blanket that says: 'Property of Phoebe Buffay not Monica'"
+    d: "Season 6-7"
+  - q: "What does Rachel lose, that she borrowed from Phoebe, who borrowed it from Monica?"
+    a: "An earring that Chandler gave Monica that she was saving for a special occasion"
+    d: "Season 4-5"
+  - q: "What does Chandler agree to do to atone for kissing Kathy?"
+    a: "Spend six hours in a wooden box"
+    d: "Season 3-4"
+  - q: "Complete the Phoebe lyric: They won't take you to the vet. You're obviously not their favorite pet..."
+    a: "You man not be a bed of roses; you're no friend to those with noses!"
+    d: "Season 1-2"
+
+  - q: "Who keeps interrupting Phoebe's final song?"
+    a: "Rachel"
+    d: "Season 10"
+  - q: "What faux pas does Phoebe make in front of David before heading to Barbados?"
+    a: "She refers to him as Mike"
+    d: "Season 8-9"
+  - q: "What is Chandler's Dad's drag name?"
+    a: "Helena Handbasket"
+    d: "Season 6-7"
+  - q: "What does Monica roll for her and Chandler to almost get married?"
+    a: "A hard eight"
+    d: "Season 4-5"
+  - q: "Which friend inadvertently sets up Ross and Emily?"
+    a: "Rachel, after suggesting Ross goes to the opera with Emily so she can go to a club with Joshua"
+    d: "Season 3-4"
+  - q: "Which friend catches chicken pox from Ben?"
+    a: "Phoebe"
+    d: "Season 1-2"
+
+
+  - q: "What happens to Ross when he tries to get a spray tan?"
+    a: "He ends up with multiple applications on his front, and none on his back"
+    d: "Season 10"
+  - q: "What is Chandler's middle name?"
+    a: "Muriel"
+    d: "Season 8-9"
+  - q: "What affliction strikes Joey on the same day he loses his health insurance?"
+    a: "A stomach hernia"
+    d: "Season 6-7"
+  - q: "When proposing to Emily, what does Ross use as an engagement ring?"
+    a: "His hoop earring"
+    d: "Season 4-5"
+  - q: "How does Phoebe meet Malcolm?"
+    a: "Malcolm is stalking Phoebe, having mistaking her for her twin, Ursula"
+    d: "Season 3-4"
+  - q: "What do the girls receive that was meant for a journalist?"
+    a: "A pizza"
+    d: "Season 1-2"
+
+  - q: "During which holiday do Monica and Chandler find out that they're getting a baby?"
+    a: "Thanksgiving"
+    d: "Season 10"
+  - q: "Which anniversary of her parents does Monica make the speech at, instead of Ross"
+    a: "Their 35th"
+    d: "Season 8-9"
+  - q: "Whilst living at Joey's after the fire, what type of food does Rachel drop on his floor?"
+    a: "Spaghetti"
+    d: "Season 6-7"
+  - q: "After Monica severs Chandler's toe, what does she accidentally bring to the hospital in its place?"
+    a: "A carrot"
+    d: "Season 4-5"
+  - q: "On the way to the ski cabin, what does Joey use to jimmy open Phoebe's taxi after they get locked out?"
+    a: "The underwire from Phoebe's bra"
+    d: "Season 3-4"
+  - q: "After trailing several stage names throughout the episode, during the closing credits what stage name does Joey use?"
+    a: "Holden McGroin"
+    d: "Season 1-2"
+
+
+  - q: "When Monica and Chandler visit Phoebe's friends who also went through adoption, what is the first faux pas that Chandler makes?"
+    a: "He tells their son that he's adopted"
+    d: "Season 10"
+  - q: "What are the names of the couple that Monica and Chandler meet on the way back from their honeymoon?"
+    a: "Jenny and Greg"
+    d: "Season 8-9"
+  - q: "When Rachel and Monica sneak in to watch Ross's university lecture, what re they shocked to find him doing?"
+    a: "Speaking in an English accent"
+    d: "Season 6-7"
+  - q: "What does Phoebe purchase from a used clothes store, assuming they're maternity clothes?"
+    a: "Santa pants"
+    d: "Season 4-5"
+  - q: "What does Monica start making large quantities of, in an attempt to get over Richard?"
+    a: "Jam"
+    d: "Season 3-4"
+  - q: "Phoebe receives compensation after finding a thumb in what?"
+    a: "A can of soda"
+    d: "Season 1-2"
+
+  - q: "What was the intended shape of Emma's first birthday cake?"
+    a: "A bunny"
+    d: "Season 10"
+  - q: "What is the name of Ursula's ex-fiance that Phoebe then dates?"
+    a: "Eric"
+    d: "Season 8-9"
+  - q: "Who is Joey's new flatmate after Chandler moves in with Monica?"
+    a: "Janine"
+    d: "Season 6-7"
+  - q: "what happens to Ross's wedding ring after Joey throws him a bachelor party?"
+    a: "The duck eats it"
+    d: "Season 4-5"
+  - q: "After bumping into Rachel in the bar that was to become Central Perk, what does Monica bet Chandler for ten bucks?"
+    a: "That she will never see Rachel again in her life"
+    d: "Season 3-4"
+  - q: "Why does Chandler start gagging in front of a former model?"
+    a: "He puts someone else's discarded gum in his mouth"
+    d: "Season 1-2"
+    
