typo fix and add season info to question

--- a/friends.yaml
+++ b/friends.yaml
@@ -1387,7 +1387,7 @@
     a: "Ross"
     d: "Season 8-9"
   - q: "Who or what is Rosita?"
-    a: "Joey's Beloved armchair"
+    a: "Joey's beloved armchair"
     d: "Season 6-7"
   - q: "After Joey tapes his own ending to a crime show so as not to disappoint his grandmother, to what does the tape then cut?"
     a: "A recording of Chandler singing"
