I found the missing cards for the friends trivia game

--- a/friends.yaml
+++ b/friends.yaml
@@ -1875,42 +1875,40 @@
   - q: "Whilst out to dinner celebrating Monica's promotion, what is Rachel's 'main' on which her side salad is on the side?"
     a: "A glass of water"
     d: "Season 1-2"
-# missing becasue of toddler
-  - q: ""
-    a: ""
+  - q: "In The One With Princess Consuela, what difficulty does Rachel encounter whilst interviewing for a new job?"
+    a: "Mr. Zelner, her current boss, is seated at the next table"
     d: "Season 10"
-  - q: ""
-    a: ""
+  - q: "Chandler decides to switch careers and try advertising, since he's good at writing slogans. What slogan does he write for bagels and doughnuts?"
+    a: "Bagels and doughnuts, round food for every mood!"
     d: "Season 8-9"
-  - q: ""
-    a: ""
+  - q: "Who are the nap partners?"
+    a: "Joe and Ross"
     d: "Season 6-7"
-  - q: ""
-    a: ""
+  - q: "Name one of the three housewarming gifts that Phoebe gives to Ross."
+    a: "Salt, Bread, and a scented candle for the bathroom"
     d: "Season 4-5"
-  - q: ""
-    a: ""
+  - q: "What does it mean to 'pull a Monica'?"
+    a: "To screw something up"
     d: "Season 3-4"
-  - q: ""
-    a: ""
+  - q: "Who walks into Central Perk as Russ explains that Rachel dumped him because he reminded her too much of somebody?"
+    a: "Julie"
     d: "Season 1-2"
-# missing becasue of toddler
 # card 100
-  - q: ""
-    a: ""
+  - q: "What does Monica put three of in Joey's freezer before moving out?"
+    a: "Lasagnas"
     d: "Season 10"
-  - q: ""
-    a: ""
+  - q: "Who do Monica and Chandler bump into at the fertility clinic?"
+    a: "Janice"
     d: "Season 8-9"
-  - q: ""
-    a: ""
+  - q: "After giving up her job in real estate, what does Melissa do, where she feels like she can really help people and make a difference?"
+    a: "Party planner"
     d: "Season 6-7"
-  - q: ""
-    a: ""
+  - q: "What job does Joey take up in Vegas whilst waiting for his film to get funding?"
+    a: "He dresses up like a centurion and poses for photos at a casino"
     d: "Season 4-5"
-  - q: ""
-    a: ""
+  - q: "What is Monica's biggest pet peeve?"
+    a: "Animals dressed as humans"
     d: "Season 3-4"
-  - q: ""
-    a: ""
+  - q: "After Rachel's two parties, which friend kisses her mother on the lips to distract her from seeing her ex-husband?"
+    a: "Joey"
     d: "Season 1-2"
